--- a/local.properties
+++ b/local.properties
@@ -18,6 +18,8 @@ tomcat.jmx.port=2003
 tomcat.ajp.port=2009
 tomcat.jmx.server.port=2004
 
+
+extgen.extension.path=${HYBRIS_BIN_DIR}/CoreRepository
 #tomcat.legacy.deployment=false
 
 
