--- a/local.properties
+++ b/local.properties
@@ -19,6 +19,10 @@ tomcat.ajp.port=2009
 tomcat.jmx.server.port=2004
 
 
+hmc.structure.db=false
+
+#to specify default language of hmc oob default language is EN
+hmc.language=de
 extgen.extension.path=${HYBRIS_BIN_DIR}/CoreRepository
 #tomcat.legacy.deployment=false
 
