--- a/local.properties
+++ b/local.properties
@@ -18,7 +18,6 @@ tomcat.jmx.port=2003
 tomcat.ajp.port=2009
 tomcat.jmx.server.port=2004
 
-
 hmc.structure.db=false
 
 #to specify default language of hmc oob default language is EN
@@ -26,7 +25,16 @@ hmc.language=de
 extgen.extension.path=${HYBRIS_BIN_DIR}/CoreRepository
 #tomcat.legacy.deployment=false
 
+#mail.from=jayantgawade30@gmail.com
+#mail.replyto=jayantgawade30@gmail.com
+#mail.smtp.server=smtp.gmail.com
+#mail.smtp.port=587
+#mail.smtp.user=jayantgawade30@gmail.com
+#mail.smtp.password=l@ve4ever
+#mail.smtp.starttls.enable=true
 
+mail.smtp.server=127.0.0.1
+mail.smtp.port=25
 #bundled.server.type=tomcat
 #bundled.tomcat.home=D:/Software/apache-tomcat-8.0.28
 #bundled.tomcat.base=D:/Software/apache-tomcat-8.0.28
