Signed-off-by: Jayant <jayantg@pragiti.com>

--- a/local.properties
+++ b/local.properties
@@ -39,3 +39,6 @@ mail.smtp.port=25
 #bundled.tomcat.home=D:/Software/apache-tomcat-8.0.28
 #bundled.tomcat.base=D:/Software/apache-tomcat-8.0.28
 #bundled.tomcat.version=8.0.28
+
+#for literal egar Loading
+servicelayer.prefetch=literal
